@@ -107,6 +107,8 @@ public class UsageLimitVerifierImpl implements UsageLimitVerifier {
 
 		var context = new LimitTrackingContext(feature, userGrouping, limitSearchCriteriaList);
 
+		usageRepository.loadUsageData(context);
+
 		if (isRecord) {
 			limitVerificationStrategiesMap
 					.forEach((usageLimit, verifStrategy) -> verifStrategy.recordFeatureUsage(context, usageLimit, units.get(usageLimit.getId())));
@@ -122,7 +124,7 @@ public class UsageLimitVerifierImpl implements UsageLimitVerifier {
 	private List<RecordSearchCriteria> gatherSearchCriteria(Map<UsageLimit, UsageLimitVerificationStrategy> verificationStrategyMap) {
 		return verificationStrategyMap.entrySet().stream()
 				.map(entry -> getLimitSearchCriteria(entry.getValue(), entry.getKey()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private Map<UsageLimit, UsageLimitVerificationStrategy> findVerificationStrategiesByLimit(Feature feature, UserGrouping userGrouping) {
